1.5/_sources/modules/generated/sklearn.preprocessing.StandardScaler.rst.txt
StandardScaler
==============

.. currentmodule:: sklearn.preprocessing

.. autoclass:: StandardScaler
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.preprocessing.StandardScaler sklearn.preprocessing.StandardScaler.__init__ sklearn.preprocessing.StandardScaler.fit sklearn.preprocessing.StandardScaler.fit_transform sklearn.preprocessing.StandardScaler.get_feature_names_out sklearn.preprocessing.StandardScaler.get_metadata_routing sklearn.preprocessing.StandardScaler.get_params sklearn.preprocessing.StandardScaler.inverse_transform sklearn.preprocessing.StandardScaler.partial_fit sklearn.preprocessing.StandardScaler.set_fit_request sklearn.preprocessing.StandardScaler.set_inverse_transform_request sklearn.preprocessing.StandardScaler.set_output sklearn.preprocessing.StandardScaler.set_params sklearn.preprocessing.StandardScaler.set_partial_fit_request sklearn.preprocessing.StandardScaler.set_transform_request sklearn.preprocessing.StandardScaler.transform 
   :add-heading: Gallery examples
   :heading-level: -