1.7/_sources/modules/generated/sklearn.preprocessing.StandardScaler.rst.txt
StandardScaler
==============

.. currentmodule:: sklearn.preprocessing

.. autoclass:: StandardScaler
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.preprocessing.StandardScaler sklearn.preprocessing.StandardScaler.__delattr__ sklearn.preprocessing.StandardScaler.__dir__ sklearn.preprocessing.StandardScaler.__eq__ sklearn.preprocessing.StandardScaler.__format__ sklearn.preprocessing.StandardScaler.__ge__ sklearn.preprocessing.StandardScaler.__getattribute__ sklearn.preprocessing.StandardScaler.__getstate__ sklearn.preprocessing.StandardScaler.__gt__ sklearn.preprocessing.StandardScaler.__hash__ sklearn.preprocessing.StandardScaler.__init__ sklearn.preprocessing.StandardScaler.__init_subclass__ sklearn.preprocessing.StandardScaler.__le__ sklearn.preprocessing.StandardScaler.__lt__ sklearn.preprocessing.StandardScaler.__ne__ sklearn.preprocessing.StandardScaler.__new__ sklearn.preprocessing.StandardScaler.__reduce__ sklearn.preprocessing.StandardScaler.__reduce_ex__ sklearn.preprocessing.StandardScaler.__repr__ sklearn.preprocessing.StandardScaler.__setattr__ sklearn.preprocessing.StandardScaler.__setstate__ sklearn.preprocessing.StandardScaler.__sizeof__ sklearn.preprocessing.StandardScaler.__sklearn_clone__ sklearn.preprocessing.StandardScaler.__sklearn_tags__ sklearn.preprocessing.StandardScaler.__str__ sklearn.preprocessing.StandardScaler.__subclasshook__ sklearn.preprocessing.StandardScaler._build_request_for_signature sklearn.preprocessing.StandardScaler._get_default_requests sklearn.preprocessing.StandardScaler._get_doc_link sklearn.preprocessing.StandardScaler._get_metadata_request sklearn.preprocessing.StandardScaler._get_param_names sklearn.preprocessing.StandardScaler._get_params_html sklearn.preprocessing.StandardScaler._html_repr sklearn.preprocessing.StandardScaler._repr_html_inner sklearn.preprocessing.StandardScaler._repr_mimebundle_ sklearn.preprocessing.StandardScaler._reset sklearn.preprocessing.StandardScaler._validate_params sklearn.preprocessing.StandardScaler.fit sklearn.preprocessing.StandardScaler.fit_transform sklearn.preprocessing.StandardScaler.get_feature_names_out sklearn.preprocessing.StandardScaler.get_metadata_routing sklearn.preprocessing.StandardScaler.get_params sklearn.preprocessing.StandardScaler.inverse_transform sklearn.preprocessing.StandardScaler.partial_fit sklearn.preprocessing.StandardScaler.set_fit_request sklearn.preprocessing.StandardScaler.set_inverse_transform_request sklearn.preprocessing.StandardScaler.set_output sklearn.preprocessing.StandardScaler.set_params sklearn.preprocessing.StandardScaler.set_partial_fit_request sklearn.preprocessing.StandardScaler.set_transform_request sklearn.preprocessing.StandardScaler.transform 
   :add-heading: Gallery examples
   :heading-level: -